--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -1,3 +1,7 @@
+/* =========================================== */
+/* GENERAL */
+/* =========================================== */
+
 :root {
   --font-default: "DM Sans", Arial, Helvetica, sans-serif;
   --font-slab: var(--font-default);
@@ -33,6 +37,23 @@ img {
   padding-right: 1rem;
 }
 
+.button {
+  background: #fe142f;
+  margin-top: 0.5em;
+  padding: 1em;
+  color: #fff;
+  border-radius: 15px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.button:hover {
+  background: #3876ac;
+}
+
+/* =========================================== */
+/* NAV BAR */
+/* =========================================== */
 .topnav {
   overflow: hidden;
   margin: 3.5%;
@@ -73,6 +94,10 @@ img {
 .topnav .icon {
   display: none;
 }
+
+/** =========================================== */
+/** NAVBAR MEDIA QUERIES **/
+/** =========================================== */
 
 @media screen and (max-width: 768px) {
   .topnav a {
@@ -115,6 +140,10 @@ img {
   }
 }
 
+/* =========================================== */
+/* MAIN */
+/* =========================================== */
+
 main {
   font-size: 130%;
   font-weight: bolder;
@@ -126,6 +155,10 @@ main {
   border-radius: 2rem;
   text-align: justify;
 }
+
+/* =========================================== */
+/* SIGNUP MODAL */
+/* =========================================== */
 
 .modal-btn {
   font-size: 145%;
@@ -143,28 +176,7 @@ main {
   background: #3876ac;
 }
 
-.footer {
-  margin: 20px;
-  padding: 10px;
-  font-family: var(--font-slab);
-}
-
-/* Modal form */
-
-.button {
-  background: #fe142f;
-  margin-top: 0.5em;
-  padding: 1em;
-  color: #fff;
-  border-radius: 15px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.button:hover {
-  background: #3876ac;
-}
-
+/*? Check use */
 .smFont {
   font-size: 16px;
 }
@@ -182,7 +194,7 @@ main {
 }
 
 .content {
-  display:flex;
+  display: flex;
   flex-direction: column;
   margin: auto;
   width: 100%;
@@ -217,9 +229,9 @@ main {
 }
 
 .modal-body-submit p {
-  text-align: center; 
-  margin: auto 0; 
-  font-size:2rem;
+  text-align: center;
+  margin: auto 0;
+  font-size: 2rem;
   font-weight: 400;
 }
 
@@ -233,12 +245,12 @@ label,
   margin-bottom: 11px;
 }
 
-.requiredField{
-  font-size:0.6rem;
-  font-weight:400;
+.requiredField {
+  font-size: 0.6rem;
+  font-weight: 400;
   font-style: italic;
-  margin-left:10px;
-  color:#e54858;
+  margin-left: 10px;
+  color: #e54858;
 }
 
 .text-label {
@@ -251,8 +263,8 @@ input {
   outline: none;
 }
 
-.input-invalid{
-  border : 2px solid #e54858;
+.input-invalid {
+  border: 2px solid #e54858;
 }
 
 .text-control {
@@ -264,6 +276,7 @@ input {
   height: 48px;
 }
 
+/*? Check use */
 .formData[data-error]::after {
   content: attr(data-error);
   font-size: 0.4em;
@@ -277,10 +290,12 @@ input {
   transition: 0.3s;
 }
 
+/*? Check use */
 .formData[data-error-visible="true"]::after {
   opacity: 1;
 }
 
+/*? Check use */
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
@@ -296,6 +311,8 @@ input[data-error]::after {
     font-size: 0.4em;
     color: red;
 } */
+
+/** Checkboxes */
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -410,23 +427,10 @@ input[data-error]::after {
   border: 0;
 }
 
-.btn-submit{
+.btn-submit {
   margin-top: 10px;
 }
 
-.confirmation-message {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  padding: 0.5rem;
-  border-radius: 5px;
-  background-color: green;
-  color: white;
-  font-weight: 400;
-  text-align: center;
-  display: none;
-}
-
-/* Error messages */
 .error-message {
   font-size: 0.7rem;
   color: #FF4E60;
@@ -434,6 +438,18 @@ input[data-error]::after {
   margin-top: 5px;
 }
 
+@keyframes modalopen {
+  from {
+    opacity: 0;
+    transform: translateY(-150px);
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+/*? Check use */
 /* custom select styles */
 .custom-select {
   position: relative;
@@ -442,14 +458,17 @@ input[data-error]::after {
   font-weight: normal;
 }
 
+/*? Check use */
 .custom-select select {
   display: none;
 }
 
+/*? Check use */
 .select-selected {
   background-color: #fff;
 }
 
+/*? Check use */
 /* Style the arrow inside the select element: */
 .select-selected:after {
   position: absolute;
@@ -465,12 +484,14 @@ input[data-error]::after {
   border-radius: 5px 0 5px 0;
 }
 
+/*? Check use */
 /* Point the arrow upwards when the select box is open (active): */
 .select-selected.select-arrow-active:after {
   transform: rotate(135deg);
   top: 13px;
 }
 
+/*? Check use */
 .select-items div,
 .select-selected {
   color: #000;
@@ -482,6 +503,7 @@ input[data-error]::after {
   height: 48px;
 }
 
+/*? Check use */
 /* Style items (options): */
 .select-items {
   position: absolute;
@@ -492,17 +514,21 @@ input[data-error]::after {
   z-index: 99;
 }
 
+/*? Check use */
 /* Hide the items when the select box is closed: */
 .select-hide {
   display: none;
 }
 
+/*? Check use */
 .select-items div:hover,
 .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-/* custom select end */
+/* =========================================== */
+/* HERO SECTION */
+/* =========================================== */
 
 .hero-section {
   min-height: 93vh;
@@ -572,6 +598,10 @@ input[data-error]::after {
   padding: 0;
 }
 
+.hero-section>.btn-signup {
+  display: none;
+}
+
 .copyrights {
   color: #fe142f;
   padding: 0;
@@ -580,16 +610,9 @@ input[data-error]::after {
   font-weight: bolder;
 }
 
-.hero-section>.btn-signup {
-  display: none;
-}
-
-footer {
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin: 0 20px;
-}
-
+/** =========================================== */
+/** HERO MEDIA QUERIES **/
+/** =========================================== */
 @media screen and (max-width: 800px) {
   .hero-section {
     display: block;
@@ -637,13 +660,20 @@ footer {
   }
 }
 
-@keyframes modalopen {
-  from {
-    opacity: 0;
-    transform: translateY(-150px);
-  }
 
-  to {
-    opacity: 1;
-  }
+
+/* =========================================== */
+/* FOOTER */
+/* =========================================== */
+/*? Check use */
+.footer {
+  margin: 20px;
+  padding: 10px;
+  font-family: var(--font-slab);
+}
+
+footer {
+  padding-left: 2vw;
+  padding-right: 2vw;
+  margin: 0 20px;
 }
