--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -63,6 +63,11 @@ img {
   float: left;
 }
 
+.header-logo img {
+  height: 50px;
+
+}
+
 .main-navbar {
   float: right;
 }
@@ -70,7 +75,7 @@ img {
 .topnav a {
   float: left;
   display: block;
-  color: #000000;
+  color: #ff001b;
   text-align: center;
   padding: 12px 12px;
   margin: 5px;
@@ -107,10 +112,9 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
+    margin-top: -15px;
   }
-}
 
-@media screen and (max-width: 768px) {
   .topnav.responsive {
     position: relative;
   }
@@ -126,6 +130,10 @@ img {
     display: block;
     text-align: left;
   }
+
+  .header-logo img {
+    height: 20px;
+  }
 }
 
 @media screen and (max-width: 540px) {
@@ -136,7 +144,6 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
 }
 
@@ -157,11 +164,150 @@ main {
 }
 
 /* =========================================== */
+/* HERO SECTION */
+/* =========================================== */
+
+.hero-section {
+  min-height: 93vh;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  overflow: hidden;
+  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
+}
+
+.hero-content {
+  padding: 51px 0 51px 67px;
+  grid-column: span 4;
+  background: #232323;
+  color: #fff;
+  position: relative;
+  text-align: left;
+  /* min-width: 424px; */
+}
+
+.hero-content::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #232323;
+  position: absolute;
+  right: -80px;
+  top: 0;
+}
+
+.hero-content>* {
+  position: relative;
+  z-index: 1;
+}
+
+.hero-headline {
+  font-size: 5.3rem;
+  font-weight: normal;
+  white-space: nowrap;
+}
+
+.hero-text {
+  /* width: 146%; */
+  font-size:1.3rem;
+  font-weight: normal;
+  margin-top: 57px;
+  padding: 0;
+}
+
+.btn-signup {
+  outline: none;
+  text-transform: capitalize;
+  font-size: 1.3rem;
+  padding: 15px 23px;
+  margin: 0;
+  margin-top: 59px;
+}
+
+.hero-img {
+  grid-column: span 8;
+}
+
+.hero-img img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 0;
+}
+
+.hero-section>.btn-signup {
+  display: none;
+}
+
+.copyrights {
+  color: #fe142f;
+  padding: 0;
+  font-size: 1rem;
+  margin: 60px 0 30px;
+  font-weight: bolder;
+}
+
+/** =========================================== */
+/** HERO MEDIA QUERIES **/
+/** =========================================== */
+@media screen and (max-width: 768px) {
+  
+  .hero-section {
+    display: block;
+    box-shadow: unset;
+    min-height:0;
+  }
+
+  .hero-content {
+    background: #fff;
+    color: #000;
+    padding: 0;
+    margin-bottom: 30px;
+  }
+
+  .hero-content::after {
+    content: unset;
+  }
+
+  .hero-content .btn-signup {
+    display: none;
+  }
+
+  .hero-headline {
+    font-size: 2.2rem;
+    white-space: normal;
+  }
+
+  .hero-text {
+    width: unset;
+    font-size: 0.8rem;
+    margin-top:10px;
+  }
+
+  .hero-img img {
+    border-radius: 10px;
+  }
+
+  .hero-section>.btn-signup {
+    display: block;
+    margin: 32px auto 10px;
+    padding: 12px 35px;
+  }
+
+  .copyrights {
+    text-align: center;
+    margin-top:0;
+    font-size:0.6rem;
+  }
+}
+
+/* =========================================== */
 /* SIGNUP MODAL */
 /* =========================================== */
 
 .modal-btn {
-  font-size: 145%;
+  font-size:1.4rem;
   background: #fe142f;
   display: flex;
   margin: auto;
@@ -418,7 +564,7 @@ input[data-error]::after {
 .btn-close {
   background: #fe142f;
   display: block;
-  margin: 0 auto;
+  margin: 32px auto 0;
   border-radius: 7px;
   font-size: 1rem;
   padding: 12px 82px;
@@ -436,6 +582,15 @@ input[data-error]::after {
   color: #FF4E60;
   font-weight: 700;
   margin-top: 5px;
+}
+
+/** =========================================== */
+/** SIGNUP MODAL MEDIA QUERIES **/
+/** =========================================== */
+@media screen and (max-width: 768px) {
+  .modal-btn{
+    font-size:0.8rem;
+  }
 }
 
 @keyframes modalopen {
@@ -526,139 +681,7 @@ input[data-error]::after {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-/* =========================================== */
-/* HERO SECTION */
-/* =========================================== */
 
-.hero-section {
-  min-height: 93vh;
-  border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  overflow: hidden;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
-}
-
-.hero-content {
-  padding: 51px 67px;
-  grid-column: span 4;
-  background: #232323;
-  color: #fff;
-  position: relative;
-  text-align: left;
-  min-width: 424px;
-}
-
-.hero-content::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
-}
-
-.hero-content>* {
-  position: relative;
-  z-index: 1;
-}
-
-.hero-headline {
-  font-size: 6rem;
-  font-weight: normal;
-  white-space: nowrap;
-}
-
-.hero-text {
-  width: 146%;
-  font-weight: normal;
-  margin-top: 57px;
-  padding: 0;
-}
-
-.btn-signup {
-  outline: none;
-  text-transform: capitalize;
-  font-size: 1.3rem;
-  padding: 15px 23px;
-  margin: 0;
-  margin-top: 59px;
-}
-
-.hero-img {
-  grid-column: span 8;
-}
-
-.hero-img img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  padding: 0;
-}
-
-.hero-section>.btn-signup {
-  display: none;
-}
-
-.copyrights {
-  color: #fe142f;
-  padding: 0;
-  font-size: 1rem;
-  margin: 60px 0 30px;
-  font-weight: bolder;
-}
-
-/** =========================================== */
-/** HERO MEDIA QUERIES **/
-/** =========================================== */
-@media screen and (max-width: 800px) {
-  .hero-section {
-    display: block;
-    box-shadow: unset;
-  }
-
-  .hero-content {
-    background: #fff;
-    color: #000;
-    padding: 20px;
-  }
-
-  .hero-content::after {
-    content: unset;
-  }
-
-  .hero-content .btn-signup {
-    display: none;
-  }
-
-  .hero-headline {
-    font-size: 4.5rem;
-    white-space: normal;
-  }
-
-  .hero-text {
-    width: unset;
-    font-size: 1.5rem;
-  }
-
-  .hero-img img {
-    border-radius: 10px;
-    margin-top: 40px;
-  }
-
-  .hero-section>.btn-signup {
-    display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
-  }
-
-  .copyrights {
-    margin-top: 50px;
-    text-align: center;
-  }
-}
 
 
 
