--- a/starterOnly/assets/styles/style.css
+++ b/starterOnly/assets/styles/style.css
@@ -109,7 +109,7 @@ img {
     display: none;
   }
 
-  .topnav a.icon {
+  .topnav .icon {
     float: right;
     display: block;
     margin-top: -15px;
@@ -141,7 +141,7 @@ img {
     display: none;
   }
 
-  .topnav a.icon {
+  .topnav .icon {
     float: right;
     display: block;
   }
