--- a/starterOnly/assets/styles/style.css
+++ b/starterOnly/assets/styles/style.css
@@ -22,7 +22,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
+  /* background-image: url("background.png"); */
   font-family: var(--font-default);
   font-size: 18px;
   font-weight: 400;
